name:                silver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nytopop/silver#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Izoita
maintainer:          ericizoita@gmail.com
copyright:           Eric Izoita
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Silver.BEncode
                     , Network.Silver.Meta
                     , Network.Silver.Tracker
                     , Network.Silver.Proto
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , attoparsec
                     , cryptonite
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nytopop/silver
