name:                silver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nytopop/silver#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Izoita
maintainer:          ericizoita@gmail.com
copyright:           Eric Izoita
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Silver.BEncode
                     , Network.Silver.Meta
                     , Network.Silver.Blob
                     , Network.Silver.Peers
                     , Network.Silver.Proto
                     , Network.Silver.Torrent
                     , Network.Silver.Client
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , attoparsec
                     , cryptonite
                     , network
                     , stm
                     , filepath
                     , directory
                     , base16-bytestring
                     , HTTP
                     , http-types
                     , binary
                     , random
                     , iproute
  default-language:    Haskell2010

executable dltor
  hs-source-dirs:  example
  build-depends:   base
                 , silver
                 , bytestring
  main-is:         dltor.hs

source-repository head
  type:     git
  location: https://github.com/nytopop/silver
